Tweak footer social and design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,14 +14,14 @@
         </div>
         <div class="widget column three">
           <h4>Archives</h4>
-          <ul class="plain">
+<!--           <ul class="plain">
             <li><a href="#">March 2014</a></li>
             <li><a href="#">April 2014</a></li>
             <li><a href="#">May 2014</a></li>
             <li><a href="#">June 2014</a></li>
             <li><a href="#">July 2014</a></li>
           </ul>
-        </div>
+ -->        </div>
         <div class="widget column three">
           <h4>Fun Fact</h4>
           <div class="side-mockup center-mockup animation">
@@ -34,11 +34,10 @@
           </div>
         </div>
         <div class="widget meta-social column three">
-          <h4>Follow Us</h4>
+          <h4>Follow Me</h4>
           <ul class="inline">
-            <li><a href="#" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
-            <li><a href="#" class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a></li>
-            <li><a href="#" class="pinterest-share border-box"><i class="fa fa-pinterest fa-lg"></i></a></li>
+            <li><a href="https://twitter.com/MisplacedYankee" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
+            <li><a href="https://www.facebook.com/danny.g.mcadam" class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a></li>
           </ul>
         </div>
       </section><!-- top-footer -->
