--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,11 @@
         <div class="widget column three"><!-- la class="widget" è forse generata utomaticamente da wp -->
           <h4>Menu</h4>
           <ul class="plain">
-            <li><a href="/">Home</a></li>
-            <li><a href="/portfolio">Portfolio</a></li>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/resume">Resume</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="{{ site.data.routes.home }}">Home</a></li>
+            <li><a href="{{ site.data.routes.portfolio }}">Portfolio</a></li>
+            <li><a href="{{ site.data.routes.blog }}">Blog</a></li>
+            <li><a href="{{ site.data.routes.resume }}">Resume</a></li>
+            <li><a href="{{ site.data.routes.contact }}">Contact</a></li>
           </ul>
         </div>
         <div class="widget column three">
