--- a/_layouts/portfolio-item.html
+++ b/_layouts/portfolio-item.html
@@ -4,21 +4,8 @@ layout: default
 
 <main role="main" class="single single-portfolio">
 	<div id="intro-wrap" data-height="22.222">
-		<div id="intro" class="preload darken" data-autoplay="5000" data-navigation="true" data-pagination="true" data-transition="fade">
-			<div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
-				<div class="photocaption">
-					<h4>Illustration by <a href="http://dribbble.com/spovv">spovv</a></h4>
-				</div><!-- photocaption -->
-			</div>
-			<div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
-				<div class="photocaption">
-					<h4>Illustration by <a href="http://dribbble.com/spovv">spovv</a></h4>
-				</div><!-- photocaption -->
-			</div>
-			<div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
-				<div class="photocaption">
-					<h4>Illustration by <a href="http://dribbble.com/spovv">spovv</a></h4>
-				</div><!-- photocaption -->
+		<div id="intro" class="preload darken">
+			<div class="intro-item port" style="background-image: url({{page.image}});">
 			</div>
 		</div><!-- intro -->
 	</div><!-- intro-wrap -->
