--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,8 +42,8 @@
         </div>
       </section><!-- top-footer -->
       <section id="bottom-footer">
-        <p class="keep-left">&copy; 2014 <a href="http://mokaine.com/" alt="Mokaine Lab">Mokaine</a>. All Rights Reserved.</p>
-        <p class="keep-right">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+        <p class="keep-left">&copy; 2014 <a href="{{site.data.routes.home}}" alt="Gamble McAdam">Gamble McAdam</a>. All Rights Reserved.</p>
+        <p class="keep-right">"If you don't know, the thing to do is not to get scared, but to learn."</p>
       </section><!-- bottom-footer -->
     </div><!-- row-content -->
   </div><!-- row -->
