--- a/css/style.css
+++ b/css/style.css
@@ -1738,6 +1738,7 @@ section.greyish {
 
 .more-btn {
     text-align: center;
+    margin-top: 10px;
 }
 
 
@@ -1915,9 +1916,9 @@ section.greyish {
     -webkit-border-radius: 25%;
     -moz-border-radius: 25%;
     border-radius: 25%;
-    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.08);
+/*    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.08);
     -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.08);
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.08);*/
 }
 
 .timeline .experience-info {
