--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,26 +3,12 @@ layout: default
 ---
 <main role="main" class="single single-post">
 			<div id="intro-wrap">
-				<div id="intro" class="preload darken" data-autoplay="5000" data-navigation="true" data-pagination="true" data-transition="fade">
-					<div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
-						<div class="photocaption">
-							<h4>Photography by <a href="http://danielezedda.com/">Daniele Zedda</a></h4>
-						</div><!-- photocaption -->
-					</div>
-					<div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
-						<div class="photocaption">
-							<h4>Photography by <a href="http://danielezedda.com/">Daniele Zedda</a></h4>
-						</div><!-- photocaption -->
-					</div>
-					<div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
-						<div class="photocaption">
-							<h4>Photography by <a href="http://danielezedda.com/">Daniele Zedda</a></h4>
-						</div><!-- photocaption -->
-					</div>
-					<div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
-						<div class="photocaption">
-							<h4>Photography by <a href="http://danielezedda.com/">Daniele Zedda</a></h4>
-						</div><!-- photocaption -->
+				<div id="intro" class="preload darken">
+					<div class="intro-item" style="background-image: url({{page.image}});">
+						<div class="caption">
+							<h2>{{page.title}}</h2>
+							<p>{{page.subtitle}}</p>
+						</div><!-- caption -->
 					</div>
 				</div><!-- intro -->
 			</div><!-- intro-wrap -->
@@ -48,7 +34,6 @@ layout: default
 								{% endif %}
 							{% endfor %}
 							 - <time datetime="2013-11-09">November 9, 2013</time></h5>
-							<h1>{{ page.title }}</h1>
 							{{content}}
 						</article>
 
