--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
             <a href="{{ site.data.routes.home }}">Home</a>
           </li>
           <li class="menu-item">
-            <a href="{{ site.data.routes.portfolio }}">Works</a>
+            <a href="{{ site.data.routes.portfolio }}">Portfolio</a>
             <ul class="sub-menu">
               {% for item in site.portfolio %}
                 <li><a href="{{ item.url }}">{{ item.project }}</a></li>
