--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,6 @@
 ---
 layout: default
 ---
-{% assign tagStr = '' %}
-{% for tag in page.tags %}
-    {% capture tagStr %}{{ tagStr }},{{ tag }}{% endcapture %}
-{% endfor %}
-{% capture url %}{{ site.url }}{{ page.url }}{% endcapture %}
-{% if page.shortUrl != null %}
-    {% assign url = page.shortUrl %}
-{% endif %}
 <main role="main" class="single single-post">
 			<div id="intro-wrap">
 				<div id="intro" class="preload darken">
@@ -26,7 +18,7 @@ layout: default
 					<div id="post-nav">
 						<ul class="clear-after reset plain">
 							<li id="prev-items" class="post-nav"><a href="#"><i class="fa fa-chevron-left"></i><span class="label">Prev</span></a></li>
-							<li id="all-items" class="post-nav"><a href="#"><i class="icon icon-images"></i></a></li>
+							<li id="all-items" class="post-nav"><a href="{{ site.data.routes.blog }}"><i class="icon icon-images"></i></a></li>
 							<li id="next-items" class="post-nav"><a href="#"><span class="label">Next</span><i class="fa fa-chevron-right"></i></a></li>
 						</ul>
 					</div>
@@ -47,6 +39,15 @@ layout: default
 
 					</div><!-- post-area -->
 
+					{% assign tagStr = '' %}
+					{% for tag in page.tags %}
+					    {% capture tagStr %}{{ tagStr }},{{ tag }}{% endcapture %}
+					{% endfor %}
+					{% capture url %}{{ site.url }}{{ page.url }}{% endcapture %}
+					{% if page.shortUrl != null %}
+					    {% assign url = page.shortUrl %}
+					{% endif %}
+
 					<div class="meta-social">
 						<ul class="inline center">
 							<li><a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ url }}&via=MisplacedYankee&hashtags={{ tagStr }}" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
@@ -54,7 +55,7 @@ layout: default
 						</ul>
 					</div>
 
-					<div class="related clear-after">
+<!-- 					<div class="related clear-after">
 						<h4>Related Posts</h4>
 						<div class="item">
 							<figure><img src="http://placehold.it/600x600/ddd/fff&text=Beetle%20image" alt=""></figure>
@@ -63,8 +64,8 @@ layout: default
 									<div class="post-type"><i class="icon icon-search"></i></div>
 									<h2>Spicemode</h2>
 									<p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								</div><!-- overlay-content -->
-							</a><!-- overlay -->
+								</div>
+							</a>
 						</div>
 						<div class="item">
 							<figure><img src="http://placehold.it/600x600/ddd/fff&text=Beetle%20image" alt=""></figure>
@@ -73,8 +74,8 @@ layout: default
 									<div class="post-type"><i class="icon icon-search"></i></div>
 									<h2>In the end</h2>
 									<p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								</div><!-- overlay-content -->
-							</a><!-- overlay -->
+								</div>
+							</a>
 						</div>
 						<div class="item last">
 							<figure><img src="http://placehold.it/600x600/ddd/fff&text=Beetle%20image" alt=""></figure>
@@ -83,99 +84,24 @@ layout: default
 									<div class="post-type"><i class="icon icon-search"></i></div>
 									<h2>Moove</h2>
 									<p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								</div><!-- overlay-content -->
-							</a><!-- overlay -->
+								</div>
+							</a>
 						</div>
-					</div>
+					</div> -->
 
-					<div class="comment-section">
-						<h3 id="comments">19 Comments</h3>
-						<ul class="comment-list plain">
-							<li class="comment">
-								<div class="single-comment">
-									<div class="comment-author">
-										<img src="http://placehold.it/60x60" class="avatar" alt="">
-										<cite><a href="#">Mark Robben</a></cite>
-										<span class="says">says:</span>
-									</div><!-- comment-author -->
-									<div class="comment-meta">
-										<time datetime="2013-03-23 19:58">March 23, 2013 at 7:58 pm</time> / <a href="#" class="reply">Reply</a>
-									</div><!-- comment-meta -->
-									<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-								</div><!-- single-comment -->
-								<ul class="children plain">
-									<li class="comment">
-										<div class="single-comment">
-											<div class="comment-author">
-												<img src="http://placehold.it/60x60" class="avatar" alt="">
-												<cite><a href="#">Mark Robben</a></cite>
-												<span class="says">says:</span>
-											</div><!-- comment-author -->
-											<div class="comment-meta">
-												<time datetime="2013-03-23 19:58">March 23, 2013 at 7:58 pm</time> / <a href="#" class="reply">Reply</a>
-											</div><!-- comment-meta -->
-											<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-										</div><!-- single-comment -->
-										<ul class="children plain">
-											<li class="comment">
-												<div class="single-comment">
-													<div class="comment-author">
-														<img src="http://placehold.it/60x60" class="avatar" alt="">
-														<cite><a href="#">Mark Robben</a></cite>
-														<span class="says">says:</span>
-													</div><!-- comment-author -->
-													<div class="comment-meta">
-														<time datetime="2013-03-23 19:58">March 23, 2013 at 7:58 pm</time> / <a href="#" class="reply">Reply</a>
-													</div><!-- comment-meta -->
-													<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-												</div><!-- single-comment -->
-											</li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li class="comment">
-								<div class="single-comment">
-									<div class="comment-author">
-										<img src="http://placehold.it/60x60" class="avatar" alt="">
-										<cite><a href="#">Mark Robben</a></cite>
-										<span class="says">says:</span>
-									</div><!-- comment-author -->
-									<div class="comment-meta">
-										<time datetime="2013-03-23 19:58">March 23, 2013 at 7:58 pm</time> / <a href="#" class="reply">Reply</a>
-									</div><!-- comment-meta -->
-									<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-								</div><!-- single-comment -->
-							</li>
-							<li class="comment">
-								<div class="single-comment">
-									<div class="comment-author">
-										<img src="http://placehold.it/60x60" class="avatar" alt="">
-										<cite><a href="#">Mark Robben</a></cite>
-										<span class="says">says:</span>
-									</div><!-- comment-author -->
-									<div class="comment-meta">
-										<time datetime="2013-03-23 19:58">March 23, 2013 at 7:58 pm</time> / <a href="#" class="reply">Reply</a>
-									</div><!-- comment-meta -->
-									<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-								</div><!-- single-comment -->
-							</li>
-						</ul>
-					</div><!-- comment-section -->
-					<div id="post-comment" class="clear-after">
-						<h3 id="reply-title">Leave a Reply</h3>
-						<p class="comment-note">Your email address will not be published.</p>
-						<form class="comment-form">
-							<span class="pre-input"><i class="icon icon-user"></i></span>
-							<input class="name plain buffer" type="text" placeholder="Name">
-							<span class="pre-input"><i class="icon icon-email"></i></span>
-							<input class="email plain buffer" type="email" placeholder="Email">
-							<span class="pre-input"><i class="icon icon-globe"></i></span>
-							<input class="email plain buffer" type="text" placeholder="Website">
-							<textarea class="plain buffer" placeholder="Don't forget that kindness is all!"></textarea>
-							<input class="plain button red" type="submit" value="Submit Comment">
-						</form>
-					</div><!-- post-comment -->
+					<div id="disqus_thread"></div>
+					<script type="text/javascript">
+					    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+					    var disqus_shortname = 'ramblingambler'; // required: replace example with your forum shortname
+
+					    /* * * DON'T EDIT BELOW THIS LINE * * */
+					    (function() {
+					        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+					        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+					        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+					    })();
+					</script>
+					<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 				</div><!-- row-content -->
 			</div><!-- row -->
