--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,8 +50,8 @@ layout: default
 
 					<div class="meta-social">
 						<ul class="inline center">
-							<li><a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ url }}&via=MisplacedYankee&hashtags={{ tagStr }}" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
-							<li><a href="https://www.facebook.com/sharer/sharer.php?t={{ page.title }}&u={{ url }}" class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a></li>
+							<li><a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ url }}&via=MisplacedYankee&hashtags={{ tagStr }}" class="twitter-share border-box" target="_blank"><i class="fa fa-twitter fa-lg"></i></a></li>
+							<li><a href="https://www.facebook.com/sharer/sharer.php?t={{ page.title }}&u={{ url }}" class="facebook-share border-box" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></li>
 						</ul>
 					</div>
 
