--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,8 +36,8 @@
         <div class="widget meta-social column three">
           <h4>Follow Me</h4>
           <ul class="inline">
-            <li><a href="https://twitter.com/MisplacedYankee" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
-            <li><a href="https://www.facebook.com/danny.g.mcadam" class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a></li>
+            <li><a href="https://twitter.com/MisplacedYankee" class="twitter-share border-box" target="_blank"><i class="fa fa-twitter fa-lg"></i></a></li>
+            <li><a href="https://www.facebook.com/danny.g.mcadam" class="facebook-share border-box" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></li>
           </ul>
         </div>
       </section><!-- top-footer -->
