--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,8 @@
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 	<![endif]-->
-	<link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
-	<link rel="icon" href="../images/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}/images/favicon.png" type="image/x-icon">
+	<link rel="icon" href="{{ site.url }}{{ site.baseurl }}/images/favicon.png" type="image/x-icon">
 	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="76x76" href="{{ "images/apple-touch-icon-76x76.png" | prepend: site.baseurl }}">
 	<link rel="apple-touch-icon" sizes="120x120" href="{{ "images/apple-touch-icon-120x120.png" | prepend: site.baseurl }}">
