--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,13 +15,13 @@ layout: default
 
 			<div id="main" class="row">
 				<div class="row-content buffer-left buffer-right buffer-bottom">
-					<div id="post-nav">
+<!-- 					<div id="post-nav">
 						<ul class="clear-after reset plain">
 							<li id="prev-items" class="post-nav"><a href="#"><i class="fa fa-chevron-left"></i><span class="label">Prev</span></a></li>
 							<li id="all-items" class="post-nav"><a href="{{ site.data.routes.blog }}"><i class="icon icon-images"></i></a></li>
 							<li id="next-items" class="post-nav"><a href="#"><span class="label">Next</span><i class="fa fa-chevron-right"></i></a></li>
 						</ul>
-					</div>
+					</div> -->
 
 					<div class="post-area clear-after">
 						<article role="main">
