--- a/css/style.css
+++ b/css/style.css
@@ -818,6 +818,13 @@ nav ul.sub-menu > li:last-child > a {
     margin-left: 0.667em;
 }
 
+.two-col {
+       -moz-column-count: 2;
+       -moz-column-gap: 30px;
+       -webkit-column-count: 2;
+       -webkit-column-gap: 30px;
+}
+
 .blog-image {
     height: 150px;
 }
