--- a/css/style.css
+++ b/css/style.css
@@ -825,6 +825,15 @@ nav ul.sub-menu > li:last-child > a {
        -webkit-column-gap: 30px;
 }
 
+.two-col::first-letter {
+  font-weight: bold;
+  color: RGBA(253, 104, 92, 1);
+  font-size: 2em;
+  top: 0;
+  position: relative;
+  line-height: .8;
+}
+
 .blog-image {
     height: 150px;
 }
@@ -1967,6 +1976,15 @@ section.greyish {
 .comment-form textarea {
     background-color: rgba(255,255,255,0.15);
     font-size: 0.889em !important;
+}
+
+#contact .confirmation {
+  display: none;
+  color: RGBA(51, 51, 51, 1);
+}
+
+#contact:target .confirmation {
+  display: inherit;
 }
 
 .text-light input,
