--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,9 +22,11 @@
             <a href="{{site.data.routes.blog}}">Blog</a>
             <ul class="sub-menu">
               {% for post in site.posts %}
+              {% if post.status != unpublished %}
                 <li>
                   <a href="{{ post.url }}">{{ post.title }}</a>
                 </li>
+              {% endif %}
               {% endfor %}
             </ul>
           </li>
