--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,8 @@
           <li class="menu-item">
             <a href="{{site.data.routes.blog}}">Blog</a>
             <ul class="sub-menu">
-              {% for post in site.posts %}
+              {% assign posts = site.posts | sort: 'date' %}
+              {% for post in posts reversed limit:5 %}
                 <li>
                   <a href="{{ post.url }}">{{ post.title }}</a>
                 </li>
