Reformat blog post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@ layout: default
 									{% endfor %}
 								</div>
 							</h5>
-							<div class="two-col">
+							<div class="first-letter">
 								{{content}}
 							</div>
 						</article>
