--- a/css/style.css
+++ b/css/style.css
@@ -818,17 +818,16 @@ nav ul.sub-menu > li:last-child > a {
     margin-left: 0.667em;
 }
 
-.two-col {
-       -moz-column-count: 2;
-       -moz-column-gap: 30px;
-       -webkit-column-count: 2;
-       -webkit-column-gap: 30px;
+article {
+    margin-left: 10%;
+    max-width: 80%;
+    font-size: 1.15em;
 }
 
-.two-col::first-letter {
+.first-letter::first-letter {
   font-weight: bold;
   color: RGBA(253, 104, 92, 1);
-  font-size: 2em;
+  font-size: 1.5em;
   top: 0;
   position: relative;
   line-height: .8;
