--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,5 @@
 	<link rel="apple-touch-icon" sizes="76x76" href="{{ "images/apple-touch-icon-76x76.png" | prepend: site.baseurl }}">
 	<link rel="apple-touch-icon" sizes="120x120" href="{{ "images/apple-touch-icon-120x120.png" | prepend: site.baseurl }}">
 	<link rel="apple-touch-icon" sizes="152x152" href="{{ "images/apple-touch-icon-152x152.png" | prepend: site.baseurl }}">
+	<script src="https://code.jquery.com/jquery.js"></script>
 </head>
