--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,35 +1,36 @@
-<footer role="contentinfo">
-  <div class="row">
-    <div class="row-content buffer clear-after">
-      <section id="bottom-footer">
-        <p class="keep-left">&copy; 2014 <a href="{{site.data.routes.home}}" alt="Gamble McAdam">Gamble McAdam</a>. All Rights Reserved.</p>
-        <p class="keep-right">"If you don't know, the thing to do is not to get scared, but to learn."</p>
-      </section><!-- bottom-footer -->
-    </div><!-- row-content -->
-  </div><!-- row -->
+<!-- BEGIN FOOTER -->
+<footer id="footer" class="bg-color2">
+  <ul class="sn-icons"><!-- BEGIN SOCIAL ICONS -->
+    <li><a href=""><i class="icon-facebook-sign"></i></a></li>
+    <li><a href=""><i class="icon-twitter-sign"></i></a></li>
+    <li><a href=""><i class="icon-instagram"></i></a></li>
+    <li><a href=""><i class="icon-google-plus-sign"></i></a></li>
+    <li><a href=""><i class="icon-pinterest-sign"></i></a></li>
+    <li><a href=""><i class="icon-rss-sign"></i></a></li>
+  </ul><!-- END SOCIAL ICONS -->
+  <p>Copyright &copy; 2013 <a href="http://www.wiselythemes.com" target="_blank">WiselyThemes</a>. All rights reserved.</p>
 </footer>
+<!-- END FOOTER -->
 
-<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-<script src="{{ "build/app.js" | prepend: site.baseurl }}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/packery/1.4.1/packery.pkgd.js"></script>
-<!-- <script src="{{ "js/beetle.js " | prepend: site.baseurl }}"></script>
-<script src="{{ "js/highlight.pack.js " | prepend: site.baseurl }}"></script> -->
+<!-- myConcerts and myPlaylist objects -->
+<script src="js/google_maps_marker/myconcerts.js" type="text/javascript"></script>
+<script src="music/myplaylist.js" type="text/javascript"></script>
 
+<!-- Libs -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/jquery-1.9.1.min.js"><\/script>')</script>
+<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/plugins.js" type="text/javascript"></script>
+<script src="twitter/jquery.tweet.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/slideshow/slideshow.js" type="text/javascript"></script>
+
+<script src="js/scripts.js"></script>
+
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
-$(document).ready(function(){
-
-  hljs.initHighlightingOnLoad();
-  $('span.code').each(function(i, block) {
-    hljs.highlightBlock(block);
-  });
-  $('#send').click(function(){
-    $(this).val('Sending ...');
-    $.post('https://formkeep.com/f/8321542488b7', $('#contact-form').serialize(), function(response) {
-      $('#success').html(response);
-      $('#success').hide('slow');
-      $('#send').val('Your message has been sent!');
-    });
-    return false;
-  });
-});
+  var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+  (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+  g.src='//www.google-analytics.com/ga.js';
+  s.parentNode.insertBefore(g,s)}(document,'script'));
 </script>
