--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,19 +1,39 @@
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="description" content="The Page Description">
-	<style type="text/css">@-ms-viewport{width: device-width;}</style>
-	<title>Gamble McAdam - Full-stack Web Developer</title>
-	<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}build/style.css" media="screen">
-	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
+	<meta charset="utf-8" />
+
+	<!-- Page Title -->
+	<title>Catherine & Gamble</title>
+
+	<meta name="keywords" content="onepage, single page, band template, retina ready, responsive, modern html5 template, bootstrap, css3, music, band" />
+	<meta name="description" content="Beat - Responsive One-Page Music & Band HTML5 Template" />
+	<meta name="author" content="Wisely Themes" />
+
+	<!-- Mobile Meta Tag -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+
+	<!-- Fav and touch icons -->
+	<link rel="shortcut icon" href="img/fav_touch_icons/favicon.jpg" />
+	<link rel="apple-touch-icon" href="img/fav_touch_icons/apple-touch-icon.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="img/fav_touch_icons/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="img/fav_touch_icons/apple-touch-icon-114x114.png" />
+
+	<!-- IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
-	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	<link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}/images/favicon.png" type="image/x-icon">
-	<link rel="icon" href="{{ site.url }}{{ site.baseurl }}/images/favicon.png" type="image/x-icon">
-	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="{{ "images/apple-touch-icon-76x76.png" | prepend: site.baseurl }}">
-	<link rel="apple-touch-icon" sizes="120x120" href="{{ "images/apple-touch-icon-120x120.png" | prepend: site.baseurl }}">
-	<link rel="apple-touch-icon" sizes="152x152" href="{{ "images/apple-touch-icon-152x152.png" | prepend: site.baseurl }}">
-	<script src="https://code.jquery.com/jquery.js"></script>
+
+	<!-- Google Web Font -->
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
+
+	<!-- Bootstrap CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet" />
+
+	<!-- Custom CSS -->
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+
+  <link href='css/lightversion.css' rel='stylesheet' type='text/css' id='lightversion' />
+
+	<!-- Modernizr -->
+	<script src="js/modernizr-2.6.2.min.js"></script>
+
 </head>
