--- a/css/style.css
+++ b/css/style.css
@@ -625,7 +625,7 @@ fieldset[disabled] .btn-dark2.active {
 ================================================== */
 #home{
   position: relative;
-	background: url(../img/venue.jpg) no-repeat center center fixed;
+	    background: rgba(200, 54, 54, 0);
 	padding-bottom:0px;
 	min-height:700px;
 }
@@ -2033,9 +2033,6 @@ fieldset[disabled] .btn-dark2.active {
 ================================================== */
 .gallery-scroller{
 	width: auto;
-	height: 600px;
-	overflow-x: scroll;
-	overflow-y: hidden;
 	white-space: nowrap;
 	margin-top:30px;
 }
