--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,14 @@
 <!-- BEGIN FOOTER -->
 <footer id="footer" class="bg-color2">
-  <ul class="sn-icons"><!-- BEGIN SOCIAL ICONS -->
+  <!-- <ul class="sn-icons">
     <li><a href=""><i class="icon-facebook-sign"></i></a></li>
     <li><a href=""><i class="icon-twitter-sign"></i></a></li>
     <li><a href=""><i class="icon-instagram"></i></a></li>
     <li><a href=""><i class="icon-google-plus-sign"></i></a></li>
     <li><a href=""><i class="icon-pinterest-sign"></i></a></li>
     <li><a href=""><i class="icon-rss-sign"></i></a></li>
-  </ul><!-- END SOCIAL ICONS -->
-  <p>Copyright &copy; 2013 <a href="http://www.wiselythemes.com" target="_blank">WiselyThemes</a>. All rights reserved.</p>
+  </ul>
+  <p>Copyright &copy; 2013 <a href="http://www.wiselythemes.com" target="_blank">WiselyThemes</a>. All rights reserved.</p> -->
 </footer>
 <!-- END FOOTER -->
 
