--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,26 +3,23 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <a href="#home" class="nav-logo"><img src="img/logo_small.png" alt="" height="51" /></a>
+          <a href="#home" class="nav-logo">C&G</a>
 
           <nav id="nav"><!-- BEGIN MAIN MENU -->
             <ul>
-              <li><a href="#theband">The Band</a></li>
-              <li><a href="#concerts">Concerts</a></li>
-              <li><a href="#gallery">Gallery</a></li>
-              <li><a href="#store">Store</a></li>
-              <li><a href="#contacts">Contact us</a></li>
+              <li><a href="#rsvp">RSVP</a></li>
+              <li><a href="#lodging">Lodging</a></li>
             </ul>
           </nav><!-- END MAIN MENU -->
 
-          <ul class="sn-icons"><!-- BEGIN SOCIAL ICONS -->
+          <!--<ul class="sn-icons"> BEGIN SOCIAL ICONS
             <li><a href=""><i class="icon-facebook-sign"></i></a></li>
             <li><a href=""><i class="icon-twitter-sign"></i></a></li>
             <li><a href=""><i class="icon-instagram"></i></a></li>
             <li><a href=""><i class="icon-google-plus-sign"></i></a></li>
             <li><a href=""><i class="icon-pinterest-sign"></i></a></li>
             <li><a href=""><i class="icon-rss-sign"></i></a></li>
-          </ul><!-- END SOCIAL ICONS -->
+          </ul>END SOCIAL ICONS -->
         </div>
       </div>
     </div>
