--- a/css/style.css
+++ b/css/style.css
@@ -502,10 +502,9 @@ fieldset[disabled] .btn-dark2.active {
 
 .nav-section .nav-logo {
 	position:absolute;
-	top:7px;
+	font-size: 3em;
+	top: 15px;
 	left:0;
-	visibility:hidden;
-	opacity:0;
 	filter:alpha(opacity=0);
 }
 
@@ -632,7 +631,6 @@ fieldset[disabled] .btn-dark2.active {
 
 #bottom-home{
 	width:100%;
-	height:90px;
 	background-color:#2c3136;
 	margin-top:-40px;
 	position:relative;
@@ -652,12 +650,13 @@ fieldset[disabled] .btn-dark2.active {
 }
 
 #logo{
-	display:inline-block;
-	padding-top:109px;
-	max-width:100%;
-	width:100%;
-	text-align:center;
-	margin:0 auto 36px;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: inline-block;
+	padding-top: 109px;
+	padding-bottom: 36px;
+	width: 33%;
+	text-align: center;
+	margin: 0 0 0 33%;
 }
 
 #supersized-loader {
@@ -1739,6 +1738,7 @@ fieldset[disabled] .btn-dark2.active {
 /* #Concerts
 ================================================== */
 #concerts{
+	display: none;
 	padding-top:0px;
 }
 
@@ -1883,9 +1883,10 @@ fieldset[disabled] .btn-dark2.active {
 }
 
 .ccounter{
-	margin:20px 0 0 1.5%;
-	border-bottom:1px solid #3f9f97;
-	width:97%;
+	background-color: RGBA(0, 0, 0, .5);
+	text-align: center;
+	margin-left:33%;
+	width:33%;
 }
 
 .ccounter .counter{
@@ -1899,7 +1900,7 @@ fieldset[disabled] .btn-dark2.active {
 	text-align:center;
 	bottom:35px;
 	left:0;
-	color:#3f9f97;
+	color:#fff;
 	font-size:8pt;
 }
 
