--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,13 +24,20 @@
 <script src="js/plugins.js" type="text/javascript"></script>
 <script src="twitter/jquery.tweet.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/slideshow/slideshow.js" type="text/javascript"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/diazemiliano/googlemaps-scrollprevent/master/dist/googlemaps-scrollprevent.js"></script>
+
 
 <script src="js/scripts.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
-  var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-  (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-  g.src='//www.google-analytics.com/ga.js';
-  s.parentNode.insertBefore(g,s)}(document,'script'));
+  $(function() {
+    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src='//www.google-analytics.com/ga.js';
+    s.parentNode.insertBefore(g,s)}(document,'script'));
+    // Only Google Maps Selector
+    var googleMapSelector = "iframe[src*=\"google.com/maps\"]";
+    $(googleMapSelector).scrollprevent().start();
+  });
 </script>
