--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
             <ul>
               <li><a href="#rsvp">RSVP</a></li>
               <li><a href="#lodging">Lodging</a></li>
+              <li><a href="#registry">Registry</a></li>
             </ul>
           </nav><!-- END MAIN MENU -->
 
