--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,9 @@
 
           <nav id="nav"><!-- BEGIN MAIN MENU -->
             <ul>
-              <li><a href="#rsvp">RSVP</a></li>
-              <li><a href="#lodging">Lodging</a></li>
+              <li><a href="#schedule">Schedule</a></li>
+              <li><a href="#transportation">Transportation</a></li>
+              <li><a href="#map">Map</a></li>
               <li><a href="#registry">Registry</a></li>
             </ul>
           </nav><!-- END MAIN MENU -->
